--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,6 @@ Homepage: https://github.com/shell909090/goproxy
 Package: goproxy
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, python
-Description: socksv5 based proxy written by go.
- goproxy is a socksv5 proxy written by go. Connection can be crypto by aes or
+Description: anti-GFW proxy written by go.
+ goproxy is a anti-GFW proxy written by go. Connection can be crypto by aes or
  des. this might help for people in China to corss GFW.
