--- a/debian/rules
+++ b/debian/rules
@@ -4,5 +4,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+export DH_OPTIONS
+export DH_GOPKG := github.com/shell909090/goproxy
+
 %:
-	dh $@ 
+	dh $@ --buildsystem=golang --with=golang
