--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: goproxy
 Section: net
 Priority: extra
 Maintainer: Shell Xu <shell909090@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), golang, markdown, dh-golang
+Build-Depends: debhelper (>= 8.0.0), golang, markdown, dh-golang, golang-logging-dev
 Standards-Version: 3.9.4
 Homepage: https://github.com/shell909090/goproxy
 
 Package: goproxy
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: anti-GFW proxy written by go.
  goproxy is a anti-GFW proxy written by go. Connection can be crypto by aes or
  des. this might help for people in China to corss GFW.
