* use github.com/shell909090/go-logging, which I made golang-dev debian package for it. * change server from 8.8.8.8 to real one * don't modify err message in network * check id exist in put. - remove socks5 mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ go:
   - 1.2
   - tip
 script: make build
-install: go get github.com/op/go-logging
+install: go get github.com/shell909090/go-logging
 
 notifications:
   email:
