* 修改说明 * iv由服务器端发送，防御重放攻击。 * 登录加入5秒超时，防御链接耗尽攻击。 * stop模式改为空模式。

--- a/debian/config.json
+++ b/debian/config.json
@@ -3,17 +3,14 @@
     "listen": ":5233",
     "server": "srv:5233",
 
-    "logfile": "/var/log/goproxy.log",
     "loglevel": "WARNING",
 
-    "cipher": "aes",
     "key": "",
     "blackfile": "/usr/share/goproxy/routes.list.gz",
-    "resolvconf": "/etc/goproxy/resolv.conf",
 
-    "username": "shell",
-    "password": "123",
+    "username": "username",
+    "password": "password",
     "auth": {
-	"shell": "123"
+	"username": "password"
     }
 }
