* update blackip list in resolv.conf * use lookuper - remove static hostfile * use map as blackip struct - remove useless code * change free strategy

--- a/debian/resolv.conf
+++ b/debian/resolv.conf
@@ -1,10 +1,38 @@
 nameserver 8.8.8.8
+blackip 4.36.66.178
 blackip 8.7.198.45
 blackip 37.61.54.158
 blackip 46.82.174.68
 blackip 59.24.3.173
+blackip 64.33.88.161
+blackip 64.33.99.47
+blackip 64.66.163.251
+blackip 65.104.202.252
+blackip 65.160.219.113
+blackip 66.45.252.237
+blackip 72.14.205.104
+blackip 72.14.205.99
+blackip 74.125.155.102
+blackip 74.125.39.102
+blackip 74.125.39.113
 blackip 78.16.49.15
 blackip 93.46.8.89
+blackip 128.121.126.139
 blackip 159.106.121.75
+blackip 169.132.13.103
+blackip 192.67.198.6
+blackip 202.106.1.2
+blackip 202.181.7.85
+blackip 203.161.230.171
 blackip 203.98.7.65
+blackip 207.12.88.98
+blackip 208.56.31.43
+blackip 209.145.54.50
+blackip 209.220.30.174
+blackip 209.36.73.33
+blackip 209.85.229.138
+blackip 211.94.66.147
+blackip 213.169.251.35
+blackip 216.221.188.182
+blackip 216.234.179.13
 blackip 243.185.187.39
